samples/_failures_safe/1761331967_0a2b84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbf37a84.c: In function ‘main’:
./samples/SAFE/__tmp_fbf37a84.c:139:5: error: expected expression at end of input
  139 |     uint8_t sample_data2[] = {0x10,
      |     ^~~~~~~
./samples/SAFE/__tmp_fbf37a84.c:139:5: error: expected declaration or statement at end of input
